--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokemon-app",
+  "name": "character-detection",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,13 +18,14 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
-    "mui-file-input": "^2.0.0",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.1.1",
+    "tesseract.js": "^4.1.1",
     "ts-mockery": "^1.2.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
